myteo/test/parser/ast/pattern/empty_anonymous_tuple.myte
module test

val (): int = 1